[package]
name = "solutions"
version = "0.1.0"
authors = ["liujun <liujun@rxthinking.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counter = "0.5.2"
priority-queue = "1.2.1"
float-cmp = "0.9.0"
bisection = "0.1.0"







